<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="8dp"
    tools:context="com.example.marcin.wegrzyn.musicalstructureapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/songsBtn"
            android:text="@string/songs"
            style="@style/headerButtonStyle" />

        <Button
            android:id="@+id/artistBtn"
            android:text="@string/artist"
            style="@style/headerButtonStyle" />

        <Button
            android:id="@+id/genreBtn"
            android:text="@string/genre"
            style="@style/headerButtonStyle" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="20"
        android:gravity="center"
        android:text="@string/text_main_activity" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/prevBtn"
            android:text="@string/prev"
            style="@style/bottomButtonStyle" />
        <Button
            android:id="@+id/playBtn"
            android:text="@string/play"
            style="@style/bottomButtonStyle" />
        <Button
            android:id="@+id/nextBtn"
            android:text="@string/next"
            style="@style/bottomButtonStyle" />

    </LinearLayout>

</LinearLayout>
