<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="8dp"
    tools:context="com.example.marcin.wegrzyn.musicalstructureapp.MainActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="20"
        android:gravity="center"
        android:text="@string/text_artist" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/selectBTn"
            style="@style/headerButtonStyle"
            android:text="@string/select" />

        <Button
            android:id="@+id/shareBtn"
            style="@style/headerButtonStyle"
            android:text="@string/share" />

    </LinearLayout>

</LinearLayout>
